# ketsa

./: .gitattributes  .gitignore  ARCHITECTURE.md  AST.h  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Lexer.cpp  Parser.cpp  Parser.h  README.md  ROADMAP.md  build.bat  build.sh  interpreter.cpp  interpreter.h  learn.md  main.cpp  test.ketsa  value.h
.github/workflows/: ci.yml
build_release2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Ketsa.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ketsa.vcxproj  ketsa.vcxproj.filters
build_release2/ketsa.dir/Release/: ketsa.exe.recipe
build_release2/ketsa.dir/Release/ketsa.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  ketsa.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_release2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_release2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build_release2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_release2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/wiki/: Compiler-Architecture.md  Contributing.md  Examples.md  Getting-Started.md  Home.md  Language-Reference.md  Roadmap.md  Standard-Library.md  _Footer.md  _Sidebar.md
editors/vscode/: CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json
editors/vscode/images/icons/: ketsa-icon-theme.json
editors/vscode/src/: extension.ts  installer.ts  ketsaManager.ts
editors/vscode/syntaxes/: ketsa.tmLanguage.json
examples/: assign.ketsa  bench.ketsa  comprehensive.ketsa  debug.ketsa  debug10.ketsa  debug12.ketsa  debug13.ketsa  debug14.ketsa  debug15.ketsa  debug16.ketsa  debug18.ketsa  debug19.ketsa  debug2.ketsa  debug20.ketsa  debug21.ketsa  debug22.ketsa  debug23.ketsa  debug24.ketsa  debug3.ketsa  debug4.ketsa  debug5.ketsa  debug6.ketsa  debug7.ketsa  debug8.ketsa  debug9.ketsa  deftest2.ketsa  deftest3.ketsa  hello.ketsa  minimal.ketsa  part1.ketsa  section1.ketsa  section2.ketsa  section3.ketsa  section4.ketsa  section5.ketsa  section6.ketsa  section7.ketsa  section8.ketsa  section8a.ketsa  simple.ketsa  (+10 more)
src/: AST.h  CLI.cpp  CLI.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  TypeChecker.cpp  TypeChecker.h  main.cpp
src/bytecode/: Bytecode.h  Compiler.cpp  Compiler.h  VM.cpp  VM.h
src/errors/: Error.cpp  Error.h
src/jit/: JIT.cpp  JIT.h  Optimizer.cpp  Optimizer.h
src/jit/x64/: Assembler.cpp  Assembler.h
src/runtime/: Environment.cpp  Environment.h
src/runtime/values/: ArrayValue.cpp  ArrayValue.h  BooleanValue.cpp  BooleanValue.h  BuiltinFunctionValue.cpp  BuiltinFunctionValue.h  CharValue.cpp  CharValue.h  ClassValue.cpp  ClassValue.h  FloatValue.cpp  FloatValue.h  FunctionValue.cpp  FunctionValue.h  ModuleValue.cpp  ModuleValue.h  NullValue.cpp  NullValue.h  NumberValue.cpp  NumberValue.h  ObjectValue.cpp  ObjectValue.h  StringValue.cpp  StringValue.h  Value.cpp  Value.h
